Fix carousel on mobile safari

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -41,10 +41,11 @@
 .hero-section .welcome-img {
   margin-top: 2em;
   max-height: 50vh;
-  aspect-ratio: 1.5;
   background-size: cover;
   transition: background-image 0.6s ease-out;
   height: 50vh;
+  width: 75vh;
+  max-width: 95vw;
   position: relative;
 }
 
