--- a/static/styles/mobile.css
+++ b/static/styles/mobile.css
@@ -33,8 +33,8 @@
   }
 
   .hero-section .welcome-img {
-    width: 100% !important;
-    height: unset;
+    width: 90vw !important;
+    height: 60vw !important;
   }
 
   .hero-section .carousel-button {
